feat(basket): implementation of the logic of adding products to the basket, then rendering the products in the basket itself, also the ability to adjust the quantity of goods, and as a result of this, the price is updated in real time, a download was also simulated, as if there was a transfer to the server when purchasing goods

--- a/styles/blocks/_burger-button.scss
+++ b/styles/blocks/_burger-button.scss
@@ -26,7 +26,7 @@
       &:nth-child(2) {
         rotate: -45deg;
       }
-      &:last-child {
+      &:nth-child(3) {
         width: 0;
       }
     }
