--- a/styles/blocks/_top-dishes.scss
+++ b/styles/blocks/_top-dishes.scss
@@ -226,7 +226,7 @@
       background: transparent;
       border: none;
       padding: 0;
-      outline: none; // Убираем outline по умолчанию
+      outline: none; 
       @include tablet {
         --size: #{rem(30)};
       }
