feat(pricing): I wrote a little bit of extra code, I think I could have tried to approach this more competently, but for now I have shown all my skills

--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -80,4 +80,12 @@
     }
   }
 
+  &__link {
+    &.is-active {
+      font-weight: 600;
+      color: var(--color-lavender);
+      pointer-events: none;
+    }
+  }
+
 }
