creation of article functionality, their viewing, scrolling, hover effect, as well as highlighting the next element that should come after the current one

--- a/styles/blocks/_get-discount.scss
+++ b/styles/blocks/_get-discount.scss
@@ -3,6 +3,9 @@
 .get-discount {
   font-family: var(--font-family-poppins);
   padding-bottom: fluid(216, 198);
+  &__blog {
+    padding-top: fluid(230, 173);
+  }
 
   &__container {
     position: relative;
