--- a/styles/main.scss
+++ b/styles/main.scss
@@ -35,3 +35,7 @@
 @use 'blocks/map';
 @use 'blocks/basket';
 @use 'blocks/pricing';
+@use 'blocks/articles';
+@use 'blocks/related';
+@use 'blocks/article-view';
+@use 'blocks/card-detail';
